--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "bulma": "^0.7.5",
     "chai": "^4.2.0",
+    "express": "^4.17.1",
     "mocha": "^6.1.4",
+    "mongoose": "^5.6.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
