--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "start": "node index",
     "build": "webpack -p",
     "serve": "webpack-dev-server --mode=development",
-    "test": "nyc mocha test/**/*_spec.js --require test/spec_helper --recursive --exit"
+    "test": "mocha test/**/*_spec.js --require test/spec_helper --recursive --exit"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "moch": "^0.0.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "supertest": "^4.0.2",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.1"
@@ -26,6 +28,7 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "axios": "^0.19.0",
+    "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
     "bulma": "^0.7.5",
     "chai": "^4.2.0",
